# V-Sentinel

./: .gitignore  CHANGELOG.md  COMPETITIVE_ANALYSIS_PLAN.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  PHASE2_COMPLETION_REPORT.md  PHASE_10_PROGRESS_REPORT.md  PHASE_11_PROGRESS_REPORT.md  PHASE_12_PROGRESS_REPORT.md  PHASE_1_PROGRESS_REPORT.md  PHASE_2_PROGRESS_REPORT.md  PHASE_3_FINAL_SUMMARY.md  PHASE_3_PROGRESS_REPORT.md  PHASE_4_FINAL_SUMMARY.md  PHASE_4_PROGRESS_REPORT.md  PHASE_5_FINAL_SUMMARY.md  PHASE_5_PROGRESS_REPORT.md  PHASE_6_FINAL_SUMMARY.md  PHASE_6_PROGRESS_REPORT.md  PHASE_7_FINAL_SUMMARY.md  PHASE_7_PROGRESS_REPORT.md  PHASE_8_FINAL_SUMMARY.md  PHASE_8_PROGRESS_REPORT.md  PHASE_9_FINAL_SUMMARY.md  PHASE_9_PROGRESS_REPORT.md  README.md  README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_KO.md  README_RU.md  README_ZH.md  SECURITY.md  SENTINEL_COMPLETE_DELIVERABLES.md  SENTINEL_COMPREHENSIVE_ANALYSIS_REPORT.md  SENTINEL_DEVELOPER_RESOURCES_SUMMARY.md  (+13 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
V-Sentinel/: EXAMPLES_CREATION_SUMMARY.md  PHASE_2_FINAL_SUMMARY.md  SENTINEL_FINAL_PROJECT_SUMMARY_COMPLETE.md  sentinel_competitive_analysis.md  sentinel_security_threat_model.md  sentinel_technical_architecture.md
V-Sentinel-IOCs/: CHANGELOG.md  PHASE2_IMPLEMENTATION_SUMMARY.md
V-Sentinel-SDKs/python/: README.md  pyproject.toml
V-Sentinel-SDKs/python/tests/: __init__.py  conftest.py  test_clients.py
V-Sentinel-SDKs/python/v_sentinel_sdk/: exceptions.py
V-Sentinel-SDKs/python/v_sentinel_sdk/clients/: __init__.py  hosts.py
V-Sentinel-SDKs/python/v_sentinel_sdk/models/: __init__.py  detections.py  hosts.py  threat_intel.py
V-Sentinel-SDKs/python/v_sentinel_sdk/utils/: logging.py
V-Sentinel/src/audit/: Cargo.toml
V-Sentinel/src/audit/src/: lib.rs
V-Sentinel/src/cloud/: Cargo.toml
V-Sentinel/src/cloud/src/: lib.rs
V-Sentinel/src/config/: Cargo.toml
V-Sentinel/src/gaming/: Cargo.toml
V-Sentinel/src/metaverse/: Cargo.toml
V-Sentinel/src/monitoring/: Cargo.toml
V-Sentinel/src/monitoring/src/: lib.rs
V-Sentinel/src/neural/: Cargo.toml
V-Sentinel/src/performance/: Cargo.toml
api/: README.md  SENTINEL_API_DOCUMENTATION.md  openapi.yaml
archive/: COMPETITIVE_ANALYSIS_REPORT.md  FINAL_SESSION_SUMMARY.md  REPOSITORY_ANALYSIS_REPORT.md  SENTINEL_ACTION_PLAN.md  SENTINEL_FINAL_SUMMARY.md  SENTINEL_INVESTOR_PITCH_DECK.md  SENTINEL_MARKETING_ONE_PAGER.md  SENTINEL_MVP_DEVELOPMENT_PLAN.md  SENTINEL_PRESS_KIT.md  SENTINEL_PROJECT_FINAL_SUMMARY.md  SENTINEL_PROJECT_INDEX.md  SENTINEL_PROJECT_STATUS_REPORT.md  SENTINEL_SOCIAL_MEDIA_CALENDAR.md  SESSION_COMPLETE_SUMMARY.md
benches/: module_benchmarks.rs  performance_benchmarks.rs  performance_optimization_benchmarks.rs
config/: default.toml  development.toml  performance_thresholds.toml  production.toml
developer-portal/: README.md  index.html  script.js  styles.css
docs/: ADMINISTRATOR_GUIDE.md  AI_SECURITY_DOCUMENTATION.md  API_DOCUMENTATION.md  BIOMETRICS_DOCUMENTATION.md  BLOCKCHAIN_DOCUMENTATION.md  CHEATSHEET.md  CI_CD_STATUS_REPORT.md  COMPETITIVE_ANALYSIS_STRATEGY.md  CONFIGURATION_REFERENCE.md  CRYPTOGRAPHIC_INVENTORY_TOOL.md  DEEPFAKE_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPER_CONTRIBUTION_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  INVESTOR_PITCH.html  (+60 more)
src/ai/: Cargo.toml
src/ai/src/: lib.rs
src/ai_security/: Cargo.toml  api_security.rs  data_security.rs  mlops_security.rs  mod.rs  model_security.rs  models.rs  threat_defense.rs
src/ai_security/src/: api_security.rs  data_security.rs  lib.rs  mlops_security.rs  model_security.rs  models.rs
src/autonomous/: Cargo.toml
src/autonomous/src/: lib.rs
src/biometrics/: Cargo.toml
src/biometrics/src/: lib.rs
src/blockchain/: Cargo.toml
src/blockchain/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: hardware.rs  hypervisor.rs  lib.rs  memory.rs  process.rs
src/deepfake/: Cargo.toml  authentication.rs  detection.rs  forensics.rs  integration.rs  mod.rs  models.rs
src/deepfake/src/: analysis.rs  authentication.rs  detection.rs  lib.rs  models.rs  threat_intel.rs
src/error-handling/: Cargo.toml
src/error-handling/src/: lib.rs
src/iot/: Cargo.toml
src/iot/src/: lib.rs
src/mcp/: Cargo.toml
src/mcp/resources/: api_docs.md  fql_guide.md
src/mcp/src/: error.rs  lib.rs  resources.rs  server.rs  types.rs
src/mcp/src/resources/: api_docs.md  fql_guide.md
src/mcp/src/tools/: detections.rs  hosts.rs  incidents.rs  mod.rs  threat_intel.rs
src/mcp/src/transport/: mod.rs  stdio.rs
src/metaverse/: Cargo.toml
src/metaverse/src/: lib.rs
src/monitoring/: Cargo.toml
src/monitoring/src/: lib.rs
src/network/: Cargo.toml
src/network/src/: certificates.rs  handshake.rs  lib.rs  pqc_tls.rs
src/neural/: Cargo.toml
src/neural/src/: lib.rs
src/plugins/: Cargo.toml  README.md
src/plugins/src/: lib.rs
src/privacy/: Cargo.toml
src/privacy/src/: lib.rs
src/security/: Cargo.toml
src/security/src/: advanced_penetration_testing.rs  advanced_security_audit.rs  enhanced_hardening.rs  hardening.rs  lib.rs  penetration_testing.rs  pqc_hardening.rs  pqc_security.rs  secure_coding.rs  security_audit.rs  vulnerability_scanner.rs  vulnerability_scanning.rs
src/shadow_ai/: Cargo.toml  detection.rs  governance.rs  mod.rs  models.rs  response.rs  risk.rs
src/shadow_ai/src/: discovery.rs  governance.rs  lib.rs  models.rs  risk.rs  traffic.rs
src/zero_trust/: Cargo.toml  mod.rs
src/zero_trust/auth/: adaptive.rs  biometrics.rs  continuous.rs  mfa.rs  mod.rs
src/zero_trust/identity/: analytics.rs  fabric.rs  mod.rs  sso.rs  sync.rs
src/zero_trust/policy/: audit.rs  enforcement.rs  engine.rs  language.rs  mod.rs  validation.rs
src/zero_trust/segmentation/: application.rs  data.rs  mod.rs  network.rs
src/zero_trust/src/: auth.rs  enforcement.rs  identity.rs  lib.rs  policy.rs  segmentation.rs  trust.rs
src/zero_trust/trust/: mod.rs  trust_score.rs
v-sentinel-cli/: Cargo.toml  README.md
v-sentinel-cli/src/: main.rs
(+729 files in other folders)
