[package]
name = "sentinel-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SENTINEL ai module"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
