[package]
name = "sentinel-ai-security"
version.workspace = true
edition.workspace = true
description = "AI Security module for V-Sentinel - comprehensive protection for AI systems"
authors = ["Vantis Corporation"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
futures = { workspace = true }
base64 = "0.21"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hmac = "0.12"
regex = "1.10"
url = "2.5"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"