[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SENTINEL Core Security Module - Hypervisor, Memory, Process, Hardware security"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test = "0.4"