[package]
name = "sentinel-deepfake"
version.workspace = true
edition.workspace = true
description = "Deepfake Detection and Content Authentication module for V-Sentinel"
authors = ["Vantis Corporation"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
futures = { workspace = true }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
image = "0.24"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"