[package]
name = "sentinel-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SENTINEL monitoring module"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
serde = { workspace = true }
prometheus = "0.13"
uuid = { version = "1.0", features = ["v4"] }