[package]
name = "sentinel-neural"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SENTINEL neural module"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"
