[package]
name = "sentinel-shadow-ai"
version = "0.1.0"
edition = "2021"
description = "Shadow AI Detection and Governance module for V-Sentinel"
authors = ["Vantis Corporation"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
sha2 = "0.10"
base64 = "0.21"
thiserror = "1.0"
futures = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"