[package]
name = "sentinel-zero-trust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SENTINEL Zero Trust Architecture implementation"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
async-trait = { workspace = true }

# Cryptography
ring = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Security
sentinel-security = { path = "../security" }

[dev-dependencies]
tokio-test = "0.4"