[package]
name = "sentinel-zero-trust"
version.workspace = true
edition.workspace = true
description = "Zero Trust Architecture implementation for V-Sentinel"
authors = ["Vantis Corporation"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "9.0"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"