[package]
name = "sentinel-performance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SENTINEL performance module"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = "0.12"
uuid = { version = "1.0", features = ["v4"] }
chrono = { workspace = true }
lazy_static = "1.4"
criterion = { workspace = true, optional = true }
prometheus = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }